# MySQLDiag

./: .env  .gitignore  README.md  go.mod  go.sum  main.py  pyproject.toml
cmd/agent/: main.go
internal/agent/: agent.go  llm.go  prompt.go  tools.go
internal/config/: config.go  config_test.go  env.go
internal/mysql/: client.go  parser.go  parser_test.go  validator.go  validator_test.go
internal/report/: markdown.go  observation.go  writer.go  writer_test.go
internal/ssh/: client.go  commands.go  validator.go  validator_test.go
pkg/toolcall/: toolcall.go  toolcall_test.go
reports/: diagnostic_report_20260318_225615.md  diagnostic_report_20260319_224628.md
src/: agent的开发.md
src/mysql_diagnostic_agent/: __init__.py  config.py
src/mysql_diagnostic_agent/agent/: __init__.py  diagnostic_agent.py
src/mysql_diagnostic_agent/core/: __init__.py  tool_call.py
src/mysql_diagnostic_agent/report/: __init__.py  report_writer.py
src/mysql_diagnostic_agent/tools/: __init__.py  mysql_tool.py  ssh_tool.py
