[project]
name = "mysqldiag"
version = "1.0.0"
description = "MySQLDiag - 自主 MySQL/Linux 远程只读诊断工具"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "paramiko>=3.4.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
